--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
 
-  "manifest_version": 2,
-  "name": "Borderify",
+  "manifest_version": 1,
+  "name": "AutoReplay",
   "version": "1.0",
 
-  "description": "Adds a red border to all webpages matching mozilla.org.",
+  "description": "自动回复",
 
   "icons": {
     "48": "icons/border-48.jpeg"
   },
 
   "permissions": [
-    "activeTab","sessions","alarms","webRequest", "tabs"
+    "activeTab","sessions","alarms","webRequest","tabs","*://*/mytoolkit/*","*://*/crm.meierbei.com/*","webRequest"
   ],
 
   "browser_action": {
